--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello world project</title>
+    <title>LegealizeAI</title>
   </head>
 
   <body>
@@ -12,3 +12,4 @@
     <script type="module" src="/client/App.tsx"></script>
   </body>
 </html>
+w
